<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_artistas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_artistas" />
        <item
            android:id="@+id/nav_historia"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_historia" />
    </group>

    <item android:title="Entre em contato">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_contato" />

            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_sobre" />
        </menu>
    </item>
</menu>